Time: 33 ms (14.75%), Space: 145.5 MB (5.05%) - LeetHub